<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReportarIncidencia"
    android:background="@color/azul_fondo_pantallas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_nombre_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro_boton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.06"
            />

        <EditText
            android:id="@+id/edtxt_nombre_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:width="370dp"
            app:layout_constraintTop_toBottomOf="@id/txt_nombre_incidencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/name_incidence"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/azul_hint"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/entrada_personalizada"/>

        <TextView
            android:id="@+id/txt_direccion_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro_boton"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintTop_toBottomOf="@id/edtxt_nombre_incidencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/edtxt_direccion_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:width="370dp"
            app:layout_constraintTop_toBottomOf="@id/txt_direccion_incidencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/address_incidence"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/azul_hint"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/entrada_personalizada"/>

        <TextView
            android:id="@+id/txt_descripcion_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro_boton"
            app:layout_constraintTop_toBottomOf="@id/edtxt_direccion_incidencia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.06"
            />

        <EditText
            android:id="@+id/edtxt_descripcion_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:width="370dp"
            app:layout_constraintTop_toBottomOf="@id/txt_descripcion_incidencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/description_incidence"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/azul_hint"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/entrada_personalizada"/>

        <Button
            android:id="@+id/btn_gps"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:width="370dp"
            android:backgroundTint="@color/azul_oscuro_boton"
            android:text="@string/gps"
            app:icon="@drawable/icono_ubicacion"
            app:iconGravity="textEnd"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtxt_descripcion_incidencia" />

        <TextView
            android:id="@+id/txt_ubicacion_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_current"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro_boton"
            app:layout_constraintTop_toBottomOf="@id/btn_gps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.06"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>