<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="12dp"
    android:backgroundTint="@color/azul_fondo_punteado"
    card_view:cardCornerRadius="20dp"
    card_view:contentPadding="4dp"
    android:id="@+id/cardview_incidencias_reportadas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgv_imagen_incidencia_reportada"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="btn_editar_incidencia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImagenCircular2"
            app:strokeColor="@color/black"
            app:strokeWidth="0.5dp" />

        <TextView
            android:id="@+id/txt_nombre_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name_incidence"
            android:textColor="@color/azul_oscuro_boton"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/imgv_imagen_incidencia_reportada"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_ubicacion_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/location"
            android:textColor="@color/azul_hint"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_nombre_incidencia"
            app:layout_constraintStart_toEndOf="@id/imgv_imagen_incidencia_reportada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txt_descripcion_incidencia"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:text="@string/description_incidence"
            android:fontFamily="@font/roboto"
            android:textColor="@color/azul_hint"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgv_imagen_incidencia_reportada"
            app:layout_constraintTop_toBottomOf="@id/txt_ubicacion_incidencia"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toTopOf="@id/btn_editar_incidencia"/>

        <Button
            android:id="@+id/btn_editar_incidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/azul_oscuro_boton"
            android:fontFamily="@font/roboto"
            android:text="@string/edit_incidence"
            android:textSize="14sp"
            android:textStyle="bold"
            app:icon="@drawable/icono_editar"
            app:iconGravity="textStart"
            app:iconPadding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgv_imagen_incidencia_reportada" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>